--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HomeKitchen - Сетка рецептов</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+     <link  href="icon.png">
 </head>
 <body>
     <div class="app-container">
@@ -40,4 +41,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
